# treescript

./: .gitignore  .gitmodules  ChangeLog.md  README.md  package.yaml  stack.yaml
app/: Action.hs  Main.hs  Parse.hs  Run.hs
app/Server/: Decode.hs  Encode.hs  Run.hs
doc/: Abstract.txt  CodeDesign.md  History.md  Plugins.md  Semantics.md  Summary.md
js-ffi/: index.ts  package.json  tsconfig.json
resources/: settings.yaml  template.c  template.h
src/: Descript.hs  TreeScript.hs
test/: BridgeSpec.hs  BuildSpec.hs  CompileSpec.hs  IntegrSpec.hs
test-resources/: Serialize.js  Serialize.tscr  sample.out.yaml
treescript-interpreter/: Cargo.toml  README.md
treescript-interpreter/resources/: ffi.js
treescript-interpreter/resources/ffis/js/: package-lock.json  package.json
treescript-interpreter/resources/ffis/js/src/: scm.ts
treescript-interpreter/resources/ffis/js/src/main/: assert.ts  convert.ts  ffi.ts
treescript-interpreter/src/: debug.rs  lib.rs  lib_process.rs  main.rs  parse.rs  print.rs  program.rs  reduce.rs  resources.rs  session.rs  tests.rs  util.rs  value.rs  vtype.rs
treescript-interpreter/test-resources/A-Simple/: A-Simple.tprg  ast.out.tast  basic.in.scm  complex.in.scm  complex_ast.in.tast  complex_ast.out.tast
treescript-interpreter/test-resources/B-Functions/: B-Functions.tprg
treescript-interpreter/test-resources/integration/A-Simple/: A-Simple.tprg  ast.in.tast  ast.out.tast  complex_ast.in.tast  complex_ast.out.tast
treescript-interpreter/test-resources/integration/B-Functions/: complex.in.scm
treescript-interpreter/test-resources/program/: .SerializeHaskell.tprg.swp  SerializeHaskell.json  SerializeHaskell.msgpack  SerializeHaskell.tprg  SerializeRust.json  SerializeRust.msgpack
treescript-interpreter/tests/: integration.rs
treescript-langs/: package-lock.json  package.json  tsconfig.json
treescript-vscode/: CHANGELOG.md  LICENSE.txt  README.md  package.json  tslint.json
(+447 files in other folders)
