[package]
name = "treescript-interpreter"
version = "0.1.2"
authors = ["jakob <jakobeha@gmail.com>"]
license = "GPL-3.0-or-later"
description = "TreeScript interpreter, with some built-in libraries and API to create more"
readme = "README.md"
homepage = "https://github.com/jakobeha/treescript/treescript-interpreter"
repository = "https://github.com/jakobeha/treescript"
keywords = ["cli", "interpreter"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
app_dirs = "1.2.1"
clap = "2.32.0"
enum-map = "0.5.0"
Inflector = "0.11.4"
rmp-serde = "0.13.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3.0.6"
unicode_reader = "0.1.1"
